Fix layout bug

--- a/src/css/components/_sidebar.scss
+++ b/src/css/components/_sidebar.scss
@@ -1,7 +1,7 @@
 aside {
   background-color: $mulled-whine;
   height: 100vh;
-  font-size: 2em;
+  font-size: 1.5rem;
   min-width: 3em;
   position: fixed;
 
